k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-regelrett
  namespace: ns-regelrett
  labels:
    app.kubernetes.io/name: spire-regelrett
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: spire-regelrett
  ports:
    - name: http
      port: 80
      targetPort: http
