k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-default-deny-ingress
  namespace: ns-regelrett
  labels:
    app.kubernetes.io/part-of: regelrett
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-allow-backstage-to-regelrett
  namespace: ns-regelrett
  labels:
    app.kubernetes.io/part-of: regelrett
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: spire-regelrett
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ns-backstage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: backstage
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-allow-apiserver-proxy-to-regelrett
  namespace: ns-regelrett
  labels:
    app.kubernetes.io/part-of: regelrett
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: spire-regelrett
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: konnectivity-agent
      ports:
        - port: 8080
          protocol: TCP
